<resources>
    <string name="app_name">ToDoApp</string>
    <string name="my_to_do_list">Мои дела</string>
    <string name="add_to_do_item">Добавить задачу</string>
    <string name="done_count">Выполнено — %1$d</string>
    <string name="save">Сохранить</string>
    <string name="what_need_to_do">Что надо сделать…</string>
    <string name="priority">Приоритет</string>
    <string name="delete">Удалить</string>
    <string name="low">Низкий</string>
    <string name="basic">Обычный</string>
    <string name="high_importance"><font fgcolor='#FF0000'>!! Высокий</font></string>
    <string name="no">Нет</string>
    <string name="information">Информация</string>
    <string name="close">Закрыть</string>
    <string name="do_before_date">Сделать до</string>
    <string name="hide_additional_buttons_button">Скрыть дополнительные кнопки</string>
    <string name="failed_to_login">Не удалось авторизоваться</string>
    <string name="welcome_to_app">Добро пожаловать в ToDoApp!</string>
    <string name="login_explaining">Для синхронизации списка дел по сети необходимо авторизоваться с Яндeкс ID</string>
    <string name="use_offline">Пользоваться автономно</string>
    <string name="or">или</string>
    <string name="login_with_yandex_id">Войти с Яндекс ID</string>
    <string name="by_mrkurilin">by mrKurilin</string>
    <string name="log_out">Выйти</string>
    <string name="sure_to_log_out">Вы уверены что хотите выйти из Яндекс аккаунта?</string>
    <string name="yes">Да</string>
    <string name="no_network">Нет интернет соединения</string>
    <string name="it_is_clear">Понятно</string>
    <string name="cant_sync_without_network">Невозможно синхронизировать список дел с сервером т.к. отсутствует интернет соедение. Работа в автономном режиме.</string>
    <string name="not_authorized">Вы не авторизованы</string>
    <string name="cant_sync_without_auth">Невозможно синхронизировать список дел с сервером т.к. вы не авторизованы. Работа в автономном режиме.</string>
    <string name="data_synchronized">Список дел синхронизирован с сервером</string>
    <string name="synchronization_error">Ошибка синхронизации</string>
    <string name="delete_to_do_item">Удалить задачу</string>

    <string-array name="priorities">
        <item>@string/low</item>
        <item>@string/no</item>
        <item>@string/high_importance</item>
    </string-array>
</resources>