<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:padding="8dp"
    tools:context=".presentation.login_fragment.LoginFragment">

    <TextView
        android:id="@+id/welcome_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/welcome_to_app"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login_explaining"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_text_view" />

    <Button
        android:id="@+id/use_offline_button"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:background="@drawable/stroked_frame"
        android:backgroundTint="@android:color/transparent"
        android:padding="8dp"
        android:text="@string/use_offline"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/or_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/or_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        app:layout_constraintBottom_toTopOf="@id/yandex_login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/use_offline_button" />

    <TextView
        android:id="@+id/yandex_login_button"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:background="@drawable/stroked_frame"
        android:backgroundTint="@color/black"
        android:drawablePadding="4dp"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/login_with_yandex_id"
        android:textColor="@color/color_white"
        app:drawableStartCompat="@drawable/yandex_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/or_text_view" />

    <TextView
        android:id="@+id/label_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/by_mrkurilin"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>