<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:layout_scrollFlags="scroll|enterAlways|exitUntilCollapsed"
            app:title="@string/my_to_do_list"
            app:titleCollapseMode="scale">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

            <TextView
                android:id="@+id/done_count_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:layout_marginStart="40dp"
                android:paddingBottom="6dp"
                android:text="@string/done_count"
                android:textColor="#546E7A"
                android:textSize="16sp"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.5" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="end|bottom"
                android:animateLayoutChanges="true">

                <ProgressBar
                    android:id="@+id/data_progress_bar"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:visibility="gone" />

                <ImageButton
                    android:id="@+id/offline_warning_image_view"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:backgroundTint="@android:color/transparent"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/baseline_warning_amber_24"
                    app:tint="@color/yellow" />

                <CheckBox
                    android:id="@+id/done_items_visibility_checkbox"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:backgroundTint="@android:color/transparent"
                    android:button="@drawable/done_visibility_checkbox"
                    android:contentDescription="@string/app_name" />

                <ImageButton
                    android:id="@+id/log_out_image_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:backgroundTint="@android:color/transparent"
                    android:contentDescription="@string/log_out"
                    android:src="@drawable/baseline_output_24"
                    app:tint="@color/label_tertiary" />

            </LinearLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/frame"
            android:padding="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="20" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:contentDescription="@string/add_to_do_item"
        android:src="@drawable/add" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>