<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:padding="8dp">

    <CheckBox
        android:id="@+id/is_done_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/priority_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/priority"
        android:paddingEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@id/text_text_view"
        app:layout_constraintStart_toEndOf="@id/is_done_checkbox"
        app:layout_constraintTop_toTopOf="@id/text_text_view" />

    <TextView
        android:id="@+id/text_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="3"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/delete_button"
        app:layout_constraintEnd_toStartOf="@id/arrow_image_view"
        app:layout_constraintStart_toEndOf="@id/priority_image_view"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/label_secondary"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/arrow_image_view"
        app:layout_constraintStart_toEndOf="@id/priority_image_view"
        app:layout_constraintTop_toBottomOf="@id/text_text_view" />

    <ImageView
        android:id="@+id/arrow_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:importantForAccessibility="no"
        android:src="@drawable/baseline_arrow_forward_ios_24"
        app:layout_constraintBottom_toTopOf="@id/delete_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="text_text_view,
        arrow_image_view,
        is_done_checkbox,
        date_text_view,
        priority_image_view" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/additional_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="delete_button, info_button, hide_additional_buttons_button" />

    <ImageButton
        android:id="@+id/delete_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@color/color_red"
        android:contentDescription="@string/delete"
        android:src="@drawable/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier" />

    <ImageButton
        android:id="@+id/info_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@color/color_gray_light"
        android:contentDescription="@string/information"
        android:src="@drawable/info_outline"
        app:layout_constraintEnd_toStartOf="@id/delete_button"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        app:tint="@color/color_white" />

    <ImageButton
        android:id="@+id/hide_additional_buttons_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@color/color_gray_light"
        android:contentDescription="@string/hide_additional_buttons_button"
        android:src="@drawable/baseline_keyboard_arrow_up_24"
        app:layout_constraintEnd_toStartOf="@id/info_button"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        app:tint="@color/color_white" />

</androidx.constraintlayout.widget.ConstraintLayout>