<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_primary">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/back_primary"
        android:fitsSystemWindows="false"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageButton
                android:id="@+id/close_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical|start"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/close"
                android:src="@drawable/close" />

            <TextView
                android:id="@+id/save_text_view"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="8dp"
                android:clickable="true"
                android:contentDescription="@string/save"
                android:focusable="true"
                android:gravity="center_vertical"
                android:text="@string/save"
                android:textAllCaps="true"
                android:textColor="@color/save_text_view_color"
                android:textSize="14sp"
                tools:ignore="TextContrastCheck" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:padding="16dp">

            <androidx.constraintlayout.widget.Group
                android:id="@+id/deadline_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="
                date_picker_calendar_view,
                deadline_date_text_view,
                deadline_divider" />

            <EditText
                android:id="@+id/text_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/frame"
                android:gravity="top"
                android:hint="@string/what_need_to_do"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:minHeight="120dp"
                android:padding="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="VisualLintTextFieldSize" />

            <Spinner
                android:id="@+id/priority_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:entries="@array/priorities"
                android:minHeight="48dp"
                app:layout_constraintBottom_toBottomOf="@id/priority_barrier"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_edit_text" />

            <TextView
                android:id="@+id/priority_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/priority"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/priority_barrier"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_edit_text" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/priority_barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="priority_spinner,priority_text_view" />

            <View
                android:id="@+id/priority_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@id/priority_barrier" />

            <TextView
                android:id="@+id/deadline_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/do_before_date"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/deadline_date_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/deadline_switch" />

            <TextView
                android:id="@+id/deadline_date_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@id/deadline_switch"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/deadline_text_view"
                tools:text="2 июня 2021" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/deadline_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:minWidth="48dp"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/priority_divider" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/deadline_barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="deadline_text_view,deadline_date_text_view,deadline_switch" />

            <View
                android:id="@+id/deadline_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@id/deadline_barrier" />

            <CalendarView
                android:id="@+id/date_picker_calendar_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/deadline_divider" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="deadline_switch, date_picker_calendar_view" />

            <TextView
                android:id="@+id/delete_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/delete"
                android:textColor="@color/delete_text_view_color"
                app:drawableStartCompat="@drawable/delete"
                app:drawableTint="@color/delete_text_view_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/barrier"
                tools:ignore="TextContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>